crates/sql-check-tests/tests/compile_fail/unsupported_statement.stderr
error: SQL validation error: Invalid query: Only SELECT and INSERT are supported
 --> tests/compile_fail/unsupported_statement.rs:7:21
  |
7 |     let _q = query!("UPDATE users SET name = 'test'");
  |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
